<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".StatusFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myStatusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageContainerStatus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo1"
                app:shapeAppearanceOverlay="@style/CircularImageView"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/addStatusBtn"
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:cardCornerRadius="30dp"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/statusSubheading"
                app:layout_constraintHorizontal_bias="0.69"
                app:layout_constraintStart_toStartOf="@id/imageContainerStatus"
                app:layout_constraintTop_toTopOf="@id/imageContainerStatus"
                app:layout_constraintVertical_bias="2.5">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/add_status" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:id="@+id/statusHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imageContainerStatus"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/my_status"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:layout_marginBottom="2dp"
                android:layout_marginStart="15dp"
                android:id="@+id/statusSubheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imageContainerStatus"
                app:layout_constraintTop_toBottomOf="@id/statusHeading"
                android:text="@string/tap_to_add_status_update"
                android:textColor="#737373"
                android:textSize="14sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/dividerStatus"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:textColor="#737373"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myStatusLayout" />
        <TextView
            android:id="@+id/recentViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="8dp"
            android:text="@string/recent_updates"
            android:textStyle="bold"
            android:textColor="#878787"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerStatus" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statusRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="7"
            tools:listitem="@layout/chat_item"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentViewTitle"
            />
        <View
            android:id="@+id/statusListDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="#737373"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusRecyclerView" />
        <TextView
            android:paddingTop="15dp"
            android:id="@+id/descriptiveStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_statuses_are_end_to_end_encrypted"
            android:textColor="#878787"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusListDivider"
            />
        <Space
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="579dp"
            app:layout_constraintTop_toBottomOf="@id/descriptiveStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>